Fix mobile table overlap by reserving scaled height

--- a/client/src/components/PokerTable.css
+++ b/client/src/components/PokerTable.css
@@ -4,11 +4,15 @@
 
 /* outer 안에서 스케일링 된 영역이 잘리지 않도록 */
 .pdt-table-scaleWrap {
+  position: absolute;
+  left: 0;
+  top: 0;
   transform-origin: top left;
 }
 
 .pdt-table-scaleSpacer {
-  width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 /* 모바일에서 테이블 카드가 너무 꽉 차면 여백 조금 */
